--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <p>Teste para Git!</p>
         <h1>Adição de nova linha pro GIT!</h1>
+        <h3>Olha que legal, git diff!</h3>
 
     </div>
 
