Adicionando uma div

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 
     </div>
 
+    <div class="secondClass">
+
+        <h1>teste, teste, teste de nova branch!</h1>
+        <h1>Branch de nome alt-novo, testando alterações de branch!</h1>
+        <h2>Divertido.</h2>
+
+    </div>
+
 
 
 
