--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <h1>teste, teste, teste de nova branch!</h1>
         <h1>Branch de nome alt-novo, testando alterações de branch!</h1>
-        <h2>Divertido.</h2>
+        <h2>Alteração, alterações, alterar, mais uma.</h2>
 
     </div>
 
